--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       <link rel="stylesheet" href="./slyle.css">
       <img src="./аватар.jpg" alt="аватар" class="header__avatar">
       <h1 class="header__title">Карина Суворова</h1>
+      <h2>QA Engineer</h2>
       <h3 class="header__subtitle">Я классная, Вы тоже</h3>
    </div>
    
    <footer>
       <link rel="stylesheet" href="./slyle.css">
       <p>Контакты: suvorovakd@yandex.ru</p>
-      <a href="https://vk.com/1grigoryan">Вконтакте</a>
+      <a href="https://vk.com/1grigoryan">Вконтакте&#129392;</a>
    </footer>
 
 </body>
